--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </li>
 
                 <li class="nav-li">
-                    <a class="page-scroll" href="footer">Contact Us</a>
+                    <a class="page-scroll" href="#footer">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -533,7 +533,7 @@
     </div>
 
 
-    <footer>
+    <footer id="footer">
         <div class="footer-div">
             <img src="./assets/logo_with_name.png" class="" alt="">
             <p> 'SportsApp', is an aggregator platform which combines community, commerce and content for the sports
