Blog section completed

--- a/readblog.html
+++ b/readblog.html
@@ -64,7 +64,7 @@
 
         <a class="navbar-brand"  href="index.html">
             <img src="./assets/logo_with_name.png" class="" alt="">
-            <img src="./assets/2bars.png" class="" alt="">
+            <img src="./assets/2bars.png" class="bars" alt="">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
@@ -186,12 +186,28 @@
         <div class="footer-div">
             <p class="footer-div-heading">Contact Us</p>
             <ul>
-                <li><img src="./assets/Icons/Contact Us Icons/placeholder.png">&nbsp;818, Tower B, ITHUM IT Park, Sector 62, Noida, Uttar Pradesh 201301
+                <li>
+                    <div class="contactus-icon">
+                        <img src="./assets/Icons/Contact Us Icons/placeholder.png">
+                    </div>
+                    &nbsp;818, Tower B, ITHUM IT Park, Sector 62, Noida, Uttar Pradesh 201301
                 </li>
-                <li><img src="./assets/Icons/Contact Us Icons/phone.png">&nbsp;<a href="tel://9441800864">+91-944-180-0864</a> </li>
-                <li><img src="./assets/Icons/Contact Us Icons/envelope.png">&nbsp;<a href="mailto:support@sportsapp.co.in">
+                <li>
+                    <div class="contactus-icon">
+                        <img src="./assets/Icons/Contact Us Icons/phone.png">
+                    </div>
+                    &nbsp;<a href="tel://9441800864">+91-944-180-0864</a> </li>
+                <li>
+                    <div class="contactus-icon">
+                        <img src="./assets/Icons/Contact Us Icons/envelope.png">
+                    </div>
+                    &nbsp;<a href="mailto:support@sportsapp.co.in">
                         support@sportsapp.co.in</a></li>
-                <li><img src="./assets/Icons/Contact Us Icons/linkedin (1).png">&nbsp;<a href="https://in.linkedin.com/company/sportsapp_in">
+                <li>
+                    <div class="contactus-icon">
+                        <img src="./assets/Icons/Contact Us Icons/linkedin (1).png">
+                    </div>
+                    &nbsp;<a href="https://in.linkedin.com/company/sportsapp_in">
                         SportsApp</a></li>
             </ul>
         </div>
