--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
 
+    <meta name="google-site-verification" content="MBJNUdYCIRD6WFtO4Xtz_usTFKIcPVxFKkRwRyFGkio" />
+    <meta name="google-site-verification" content="nXU534IKL_cJujacFBje9wGAsDu7cVrswBwDzRWVRbQ" />
+    <meta name="google-site-verification" content="VznvyiMKGip1Y3-16GDmm6ygUfNRdiiuZqsPeQcpi3w" />
+
     <title> SportsApp </title>
 
     <meta 
@@ -131,7 +135,7 @@
 
                 <div class="aboutus-card">
                     <img class="feature-icon" src="./assets/aboutus/askMeIcon.png">
-                    <p class="feature-name">#ASK ME</p>
+                    <p class="feature-name">#ASKME</p>
                     <p class="feature-detail">Put up your sports-related queries which are then answered by Senior Coaches, Veteran Athletes and Similar Professionals, from the industry.</p>
                 </div>
                 <div class="aboutus-card">
@@ -310,10 +314,10 @@
                             <img src="./assets/journey/image6.jpg" alt="Journey-Image">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/journey/image7.jpg" alt="Journey-Image">
+                            <img src="./assets/journey/image7.png" alt="Journey-Image">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/journey/image8.png" alt="Journey-Image">
+                            <img src="./assets/journey/image8.jpg" alt="Journey-Image">
                         </div>
                     </div>
                 </div>
@@ -493,7 +497,7 @@
                                 class="linkedin-logo" src="./assets/LINKEDIN.png"> </a>
                         </div>
                         <div class="member-detail">
-                            <h4 class="member-name">Himanshu Naia</h4>
+                            <h4 class="member-name">Himanshu Nain</h4>
                             <p class="member-position">Head Of Technology</p>    
                         </div>
                         
@@ -526,16 +530,16 @@
 
                     <div class="in-div">
                         <div class="dp-image">
-                            <img class="dp" id="member2" src="./assets/member2.jpg">
-                            <a class="linkedin-link" href="https://www.linkedin.com/in/mohit-yadav-17b550115/"
+                            <img class="dp" id="member5" src="./assets/member2.jpg">
+                            <a class="linkedin-link" href="https://www.linkedin.com/in/deepak-kadian-809412175"
                             target="_blank">
                             <img class="linkedin-logo" src="./assets/LINKEDIN.png"> 
                         </a>
                                 
                         </div>
                         <div class="member-detail">
-                            <h4 class="member-name">Mohit Yadav</h4>
-                            <p class="member-position">Head Of Operations</p>    
+                            <h4 class="member-name">Deepak Kadian</h4>
+                            <p class="member-position">Head Of Design</p>
                         </div>
                     </div>
 
