Temporary Fix For App Removal

--- a/index.html
+++ b/index.html
@@ -109,10 +109,16 @@
 
         <section id="main">
 
-            <div class="main-left">
+            <!--<div class="main-left">
                 <h1 class="heading-text"><span>Empowering</span> Sports Stars Of Tomorrow</h1>
                 <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">
                     <img src="./assets/googleplay.png" alt="googlePlay">
+                </a>
+            </div>-->
+            <div class="main-left">
+                <h1 class="heading-text"><span>Empowering</span> Sports Stars Of Tomorrow</h1>
+                <a href="./assets/apks/2020-09-release.apk">
+                    <img src="./assets/Icons/download.png" alt="googlePlay">
                 </a>
             </div>
 
@@ -565,8 +571,11 @@
                 <a href="https://www.instagram.com/sportsapp.in/"><img src="./assets/Icons/Follow Us Icons/instagram.png"></a>
                 <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
             </div>
-            <div class="footer-googleplay">
+            <!--<div class="footer-googleplay">
                 <img src="assets/googleplay.png">
+            </div>-->
+            <div class="footer-googleplay">
+                <a href="./assets/apks/2020-09-release.apk"><img src="./assets/Icons/download.png" /></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
