Temporary Fix For App Removal

--- a/blog.html
+++ b/blog.html
@@ -123,11 +123,17 @@
                 </p>
                 
                 <button>
-                    <a  
+                    <!--<a
                         class="page-scroll" 
                         href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"
                         style="color:black">
                             Download
+                    </a>-->
+                    <a
+                            class="page-scroll"
+                            href="./assets/apks/2020-09-release.apk"
+                            style="color:black">
+                        Download
                     </a>
                 </button>
             </div>
