Replace Download Link With BITLY

--- a/blog.html
+++ b/blog.html
@@ -131,7 +131,7 @@
                     </a>-->
                     <a
                             class="page-scroll"
-                            href="./assets/apks/2020-09-release.apk"
+                            href="https://bit.ly/Download_SportsApp_APKLink"
                             style="color:black">
                         Download
                     </a>
@@ -221,7 +221,7 @@
                 <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
             </div>
             <div class="footer-googleplay">
-                <img src="assets/googleplay.png">
+                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/Icons/download.png" /></a>
             </div>
         </div>
 
