--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>-->
             <div class="main-left">
                 <h1 class="heading-text"><span>Empowering</span> Sports Stars Of Tomorrow</h1>
-                <a href="./assets/apks/2020-09-release.apk">
+                <a href="https://bit.ly/Download_SportsApp_APKLink">
                     <img src="./assets/Icons/download.png" alt="googlePlay">
                 </a>
             </div>
@@ -575,7 +575,7 @@
                 <img src="assets/googleplay.png">
             </div>-->
             <div class="footer-googleplay">
-                <a href="./assets/apks/2020-09-release.apk"><img src="./assets/Icons/download.png" /></a>
+                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/Icons/download.png" /></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
