--- a/readblog.html
+++ b/readblog.html
@@ -89,7 +89,7 @@
                 </li>
 
                 <li class="nav-li">
-                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">Download</a>
+                    <a class="page-scroll" href="https://bit.ly/Download_SportsApp_APKLink">Download</a>
                 </li>
 
                 <li class="nav-li">
@@ -124,7 +124,7 @@
                 <button>
                     <a  
                         class="page-scroll" 
-                        href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"
+                        href="https://bit.ly/Download_SportsApp_APKLink"
                         style="color:black">
                             Download
                     </a>
@@ -179,7 +179,7 @@
                 <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
             </div>
             <div class="footer-googleplay">
-                <img src="assets/googleplay.png">
+                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/Icons/download.png" /></a>
             </div>
         </div>
 
