Modified Team Page

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 
     <link 
         rel = "icon" 
-        href = "assets/logo_with_name.png" 
+        href = "./assets/LOGO WITHOUT LABEL.svg" 
         type = "image/x-icon" > 
 
     <link 
