--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
 <body>
     <nav class="navbar navbar-expand-lg ">
 
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="./assets/LogoSP.svg" class="" alt="">
             <img src="./assets/Bars SVG 1.svg" class="bars" alt="">
         </a>
