--- a/blog.html
+++ b/blog.html
@@ -293,12 +293,12 @@
         crossorigin="anonymous">
     </script>
 
-    <script src="scripts/numscrollerPlugin.js"></script>
-    <script src="./scripts/slick.js" type="text/javascript"></script>
+    <script src="scripts/min/numscrollerPlugin.js"></script>
+    <script src="./scripts/min/slick.js" type="text/javascript"></script>
 
-    <script src="scripts/slider.js"></script>
+    <script src="scripts/min/slider.js"></script>
 
-    <script src="scripts/blog.js" type="text/javascript"></script>
+    <script src="scripts/min/blog.js" type="text/javascript"></script>
     <script src="scripts/display_blog.js" type="text/javascript"></script>
     <!-- <script src="scripts/detail_blog.js" type="text/javascript"></script> -->
     <script src="scripts/trending_blog.js" type="text/javascript"></script>
