--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
         </div>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/min/index.js"></script>
     <script src='jquery-3.2.1.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
@@ -546,10 +546,10 @@
         crossorigin="anonymous">
     </script>
 
-    <script src="scripts/numscrollerPlugin.js"></script>
-    <script src="./scripts/slick.js" type="text/javascript"></script>
+    <script src="scripts/min/numscrollerPlugin.js"></script>
+    <script src="./scripts/min/slick.js" type="text/javascript"></script>
 
-    <script src="scripts/slider.js"></script>
+    <script src="scripts/min/slider.js"></script>
 
 
 </body>
