--- a/readblog.html
+++ b/readblog.html
@@ -595,10 +595,10 @@
         crossorigin="anonymous">
     </script>
 
-    <script src="scripts/numscrollerPlugin.js"></script>
-    <script src="./scripts/slick.js" type="text/javascript"></script>
+    <script src="scripts/min/numscrollerPlugin.js"></script>
+    <script src="./scripts/min/slick.js" type="text/javascript"></script>
 
-    <script src="scripts/slider.js"></script>
+    <script src="scripts/min/slider.js"></script>
 
     <script src="scripts/detail_blog.js" type="text/javascript"></script>
     <script src="scripts/similar_blog.js" type="text/javascript"></script>
