updated team page and  alignment of website

--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
         type = "image/x-icon" > 
 
     <link 
-        href="./styles/index.css" 
+        href="./styles/min/index.css" 
         rel="stylesheet" 
         type="text/css" />
 
@@ -45,12 +45,12 @@
 
     <!--Slick css and js-->
     <link 
-        href="./styles/slick.css" 
+        href="./styles/min/slick.css" 
         rel="stylesheet" 
         type="text/css"/>
     
     <link 
-        href="./styles/slick-theme.css" 
+        href="./styles/min/slick-theme.css" 
         rel="stylesheet" 
         type="text/css"/>
 
@@ -85,6 +85,19 @@
                 <li class="nav-li">
                     <a class="page-scroll" href="./index.html">Home</a>
                 </li>
+                <li class="nav-li">
+                    <a class="page-scroll" href="./index.html#aboutus">About Us</a>
+                </li>
+                <li class="nav-li">
+                    <a class="page-scroll" href="./index.html#journey">Journey</a>
+                </li>
+                <li class="nav-li">
+                    <a class="page-scroll" href="./index.html#our_team">Team</a>
+                </li>
+                <li class="nav-li">
+                    <a class="page-scroll" href="blog.html">Blogs</a>
+                </li>
+
                 <li class="nav-li">
                     <a class="page-scroll" href="#footer">Contact Us</a>
                 </li>
@@ -172,7 +185,7 @@
                 <img src="assets/googleplay.png">
             </div>-->
             <div class="footer-googleplay">
-                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/Icons/download.png" /></a>
+                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/SmallerDownloadButton1.svg" /></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
@@ -186,7 +199,7 @@
                     <div class="contactus-icon">
                         <img src="./assets/Icons/Contact Us Icons/placeholder.png">
                     </div>
-                    &nbsp;818, Tower B, ITHUM IT Park, Sector 62, Noida, Uttar Pradesh 201301
+                    &nbsp;<a href="https://www.google.com/maps/place/SportsApp/@28.6264886,77.370421,17z/data=!3m1!4b1!4m5!3m4!1s0x390d01b21fa5f993:0x9a258e998a95e0f2!8m2!3d28.6264839!4d77.3726097" style="text-align: justify;">818, Tower B, ITHUM IT Park, Sector 62, Noida, Uttar Pradesh 201301</a>
                 </li>
                 <li>
                     <div class="contactus-icon">
@@ -227,11 +240,8 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" 
-        crossorigin="anonymous">
-    </script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
         crossorigin="anonymous">
