--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
     <script src="./scripts/min/slick.js" type="text/javascript"></script>
 
     <script src="scripts/min/slider.js"></script>
-
+    <script src="scripts/min/index.js"></script>
 
 </body>
 
