Change download apk to play store url

--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
 
     <section id="main">
 
-        <!--<div class="main-left">
+        <div class="main-left">
             <h1 class="heading-text"><span>Empowering</span> Sports Stars Of Tomorrow</h1>
             <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">
                 <img src="./assets/googleplay.png" alt="googlePlay">
             </a>
-        </div>-->
-        <div class="main-left">
+        </div>
+        <!--<div class="main-left">
             <h1 class="heading-text"><span>Empowering</span> Sports Stars Of Tomorrow</h1>
             <a href="https://bit.ly/Download_SportsApp_APKLink">
                 <img alt="googlePlay" src="./assets/Icons/download.png">
             </a>
-        </div>
+        </div>-->
 
         <div class="main-right">
             <img alt="sportsApp" src="./assets/connection character (1).svg">
@@ -576,13 +576,13 @@
                     src="./assets/Icons/Follow Us Icons/instagram.png"></a>
             <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
         </div>
-        <!--<div class="footer-googleplay">
-            <img src="assets/googleplay.png">
-        </div>-->
         <div class="footer-googleplay">
+        <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png"/></a>
+        </div>
+        <!--<div class="footer-googleplay">
             <a href="https://bit.ly/Download_SportsApp_APKLink"><img
                     src="./assets/SmallerDownloadButton1.svg"/></a>
-        </div>
+        </div>-->
         <div class="madeinindia">
             <p>Made with ❤️ in India</p>
         </div>
