--- a/readblog.html
+++ b/readblog.html
@@ -116,7 +116,7 @@
                 </li>
 
                 <li class="nav-li">
-                    <a class="page-scroll" href="https://bit.ly/Download_SportsApp_APKLink">Download</a>
+                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">Download</a>
                 </li>
 
                 <li class="nav-li">
@@ -151,7 +151,7 @@
                 <button>
                     <a  
                         class="page-scroll" 
-                        href="https://bit.ly/Download_SportsApp_APKLink"
+                        href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"
                         style="color:black">
                             Download
                     </a>
@@ -205,8 +205,11 @@
                 <a href="https://www.instagram.com/sportsapp.in/"><img src="./assets/Icons/Follow Us Icons/instagram.png"></a>
                 <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
             </div>
-            <div class="footer-googleplay">
+            <!--<div class="footer-googleplay">
                 <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/SmallerDownloadButton1.svg" /></a>
+            </div>-->
+            <div class="footer-googleplay">
+                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png"/></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
