--- a/team.html
+++ b/team.html
@@ -406,7 +406,7 @@
                 <img src="assets/googleplay.png">
             </div>-->
             <div class="footer-googleplay">
-                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/SmallerDownloadButton1.svg" /></a>
+                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png" /></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
