--- a/blog.html
+++ b/blog.html
@@ -114,13 +114,13 @@
                     <a class="page-scroll" href="index.html">Home</a>
                 </li>
 
-                <!--<li class="nav-li">
-                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">Download</a>
-                </li>-->
-
                 <li class="nav-li">
-                    <a class="page-scroll" href="./assets/apks/2020-09-release.apk">Download</a>
+                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">Download</a>
                 </li>
+
+                <!--<li class="nav-li">
+                    <a class="page-scroll" href="./assets/apks/app.apk">Download</a>
+                </li>-->
 
                 <li class="nav-li">
                     <a class="page-scroll" href="#footer">Contact Us</a>
