--- a/privacy.html
+++ b/privacy.html
@@ -207,11 +207,8 @@
                 <a href="https://www.instagram.com/sportsapp.in/"><img src="./assets/Icons/Follow Us Icons/instagram.png"></a>
                 <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
             </div>
-            <!--<div class="footer-googleplay">
-                <img src="assets/googleplay.png">
-            </div>-->
             <div class="footer-googleplay">
-                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/SmallerDownloadButton1.svg" /></a>
+                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png"/></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
