--- a/team.html
+++ b/team.html
@@ -254,7 +254,7 @@
                     <img class="dp" src="./assets/whole team/Amit.png">
                     <a 
                     class="linkedin-link" 
-                    href="www.linkedin.com/in/MAmitNair" 
+                    href="https://www.linkedin.com/in/MAmitNair" 
                     target="_blank">
                     
                         <img class="linkedin-logo" src="./assets/Icons/White linkedin.svg"> 
