target="_blank" on click download

--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@
                 </li>
 
                 <li class="nav-li">
-                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">Download</a>
+                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp" target="_blank">Download</a>
                 </li>
 
                 <!--<li class="nav-li">
@@ -157,7 +157,8 @@
                     </a>-->
                     <a
                             class="page-scroll"
-                            href="https://bit.ly/Download_SportsApp_APKLink"
+                            href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"
+                            target="_blank"
                             style="color:black">
                         Download
                     </a>
@@ -247,7 +248,7 @@
                 <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
             </div>
             <div class="footer-googleplay">
-                <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/SmallerDownloadButton1.svg" /></a>
+                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp" target="_blank"><img src="./assets/SmallerDownloadButton1.svg" /></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
