--- a/privacy.html
+++ b/privacy.html
@@ -208,7 +208,7 @@
                 <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
             </div>
             <div class="footer-googleplay">
-                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png"/></a>
+                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"target="_blank"><img src="./assets/googleplay.png"/></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
