--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <div class="main-left">
             <h1 class="heading-text"><span>Empowering</span> Sports Stars Of Tomorrow</h1>
-            <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">
+            <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp" target="_blank">
                 <img src="./assets/googleplay.png" alt="googlePlay">
             </a>
         </div>
@@ -577,7 +577,7 @@
             <a href="https://twitter.com/SportsApp_in"><img src="./assets/Icons/Follow Us Icons/twitter.png"></a>
         </div>
         <div class="footer-googleplay">
-        <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png"/></a>
+        <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp" target="_blank"><img src="./assets/googleplay.png"/></a>
         </div>
         <!--<div class="footer-googleplay">
             <a href="https://bit.ly/Download_SportsApp_APKLink"><img
