--- a/readblog.html
+++ b/readblog.html
@@ -116,7 +116,7 @@
                 </li>
 
                 <li class="nav-li">
-                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp">Download</a>
+                    <a class="page-scroll" href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp" target="_blank">Download</a>
                 </li>
 
                 <li class="nav-li">
@@ -152,6 +152,7 @@
                     <a  
                         class="page-scroll" 
                         href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"
+                        target="_blank"
                         style="color:black">
                             Download
                     </a>
@@ -209,7 +210,7 @@
                 <a href="https://bit.ly/Download_SportsApp_APKLink"><img src="./assets/SmallerDownloadButton1.svg" /></a>
             </div>-->
             <div class="footer-googleplay">
-                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png"/></a>
+                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp" target="_blank"><img src="./assets/googleplay.png"/></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
