--- a/terms.html
+++ b/terms.html
@@ -294,7 +294,7 @@
                 <img src="assets/googleplay.png">
             </div>-->
             <div class="footer-googleplay">
-                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp"><img src="./assets/googleplay.png" /></a>
+                <a href="https://play.google.com/store/apps/details?id=in.co.sportsapp.sportsapp" target="_blank"><img src="./assets/googleplay.png" /></a>
             </div>
             <div class="madeinindia">
                 <p>Made with ❤️ in India</p>
