--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html prefix = "og: https://ogp.me/ns#">
+<!DOCTYPE html>
 <html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
 
+    <meta name="facebook-domain-verification" content="xlzm1tydi7qjxyylojzz4akq33a0oa" />
     <meta charset="utf-8"/>
     <!-- Facebook Pixel Code -->
     <script>
